// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`игнорим нестабильные поля графа 1`] = `
{
  "metadata": {
    "createdAt": Any<String>,
    "environment": Any<String>,
  },
  "nodes": [
    {
      "friends": [
        "B",
        "C",
      ],
      "id": "1",
      "name": "A",
    },
    {
      "friends": [
        "A",
        "D",
      ],
      "id": "2",
      "name": "B",
    },
    {
      "friends": [
        "A",
        "E",
      ],
      "id": "3",
      "name": "C",
    },
  ],
  "root": "A",
  "sessionId": Any<String>,
  "version": "1.0.0",
  "visitedAt": Any<String>,
}
`;

exports[`игнорим нестабильныее поля объекта с ошибкой 1`] = `
{
  "hash": Any<String>,
  "message": "What the problem, broo?",
  "name": "Error",
  "performance": {
    "duration": Any<Number>,
    "memory": Any<Number>,
  },
  "requestId": Any<String>,
  "stack": Any<String>,
  "timestamp": Any<Number>,
  "userId": "user_123",
}
`;

exports[`хрупкий тест для графа 1`] = `
{
  "metadata": {
    "createdAt": "2026-03-04T13:22:45.776Z",
    "environment": "test",
  },
  "nodes": [
    {
      "friends": [
        "B",
        "C",
      ],
      "id": "1",
      "name": "A",
    },
    {
      "friends": [
        "A",
        "D",
      ],
      "id": "2",
      "name": "B",
    },
    {
      "friends": [
        "A",
        "E",
      ],
      "id": "3",
      "name": "C",
    },
  ],
  "root": "A",
  "sessionId": "12vemgtz",
  "version": "1.0.0",
  "visitedAt": "2026-03-04T13:22:45.775Z",
}
`;

exports[`хрупкий тест для объекта с ошибкой 1`] = `
{
  "hash": "elb3r72u0w7",
  "message": "What the problem, broo?",
  "name": "Error",
  "performance": {
    "duration": 540.2425570370494,
    "memory": 817210.344936345,
  },
  "requestId": "1meg4",
  "stack": "Error: What the problem, broo?
    at getErrorObject (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/complexObjects.js:30:13)
    at Object.getErrorObject (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/complexObjects.test.js:10:17)
    at Promise.finally.completed (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:1557:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:1497:10)
    at _callCircusTest (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:1007:40)
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at _runTest (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:947:3)
    at /Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:849:7
    at _runTestsForDescribeBlock (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:862:11)
    at run (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:761:3)
    at runAndTransformResultsToJestFormat (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/jestAdapterInit.js:1918:21)
    at jestAdapter (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-circus/build/runner.js:101:19)
    at runTestInternal (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-runner/build/index.js:275:16)
    at runTest (/Users/amoremore/IdeaProjects/tipio_attempt_one/dopchik/node_modules/jest-runner/build/index.js:343:7)",
  "timestamp": 1772630565786,
  "userId": "user_123",
}
`;

exports[`чек влияния изменения для объекта с ошибкой 1`] = `
{
  "hash": Any<String>,
  "message": "What the problem, broo?",
  "name": "Error",
  "performance": {
    "duration": Any<Number>,
    "memory": Any<Number>,
  },
  "requestId": Any<String>,
  "stack": Any<String>,
  "timestamp": Any<Number>,
  "userId": "user_123",
}
`;

exports[`чек влияния измений для графа 1`] = `
{
  "metadata": {
    "createdAt": Any<String>,
    "environment": Any<String>,
  },
  "nodes": [
    {
      "friends": [
        "B",
        "C",
      ],
      "id": "1",
      "name": "A",
    },
    {
      "friends": [
        "A",
        "D",
      ],
      "id": "2",
      "name": "B",
    },
    {
      "friends": [
        "A",
        "E",
      ],
      "id": "3",
      "name": "C",
    },
  ],
  "root": "A",
  "sessionId": Any<String>,
  "version": "1.0.0",
  "visitedAt": Any<String>,
}
`;
